--- a/ush/templates/FV3LAM_wflow.xml
+++ b/ush/templates/FV3LAM_wflow.xml
@@ -1307,7 +1307,7 @@ MODULES_RUN_TASK_FP script.
 {%- endif %}
 
 {%- if not do_ensemble %}
-{%- if do_sddacycle %}
+{%- if do_pm_da %}
 <!--
 ************************************************************************
 ************************************************************************
@@ -1346,29 +1346,8 @@ MODULES_RUN_TASK_FP script.
 
     <dependency>
        <and>
-         <timedep><cyclestr offset="&START_TIME_CONVENTIONAL;">@Y@m@d@H@M00</cyclestr></timedep>
-         <taskdep task="&PREP_CYC_TN;_spinup{{ uscore_ensmem_name }}"/>
-         {%- if use_rrfse_ens %}
-         {%- if do_retro %}
-         <or>
-           <and>
-             <or>
-             {%- for h in cycl_hrs_hyb_fv3lam_ens %}
-               <streq><left>{{ h }}</left><right><cyclestr>@H</cyclestr></right></streq>
-             {%- endfor %}
-             </or>
-             {% for h in range(1, num_ens_members+1) %}
-             <datadep age="00:00:01:00"><cyclestr offset="-{{ da_cycle_interval_hrs }}:00:00">&RRFSE_FG_ROOT;/@Y@m@d@H/mem{{ "%04d" % h  }}/fcst_fv3lam/RESTART/</cyclestr><cyclestr>@Y@m@d.@H0000.coupler.res</cyclestr></datadep>
-             {%- endfor %}
-           </and>
-           <and>
-              {%- for h in cycl_hrs_hyb_fv3lam_ens %}
-                <strneq><left>{{ h }}</left><right><cyclestr>@H</cyclestr></right></strneq>
-              {%- endfor %}
-           </and>
-         </or>
-         {%- endif %}
-         {%- endif %}
+         <timedep><cyclestr offset="&START_TIME_PROCPM;">@Y@m@d@H@M00</cyclestr></timedep>
+         <taskdep task="&PROCESS_PM_TN;_spinup"/>
        </and>
     </dependency>
 
@@ -2254,7 +2233,7 @@ MODULES_RUN_TASK_FP script.
 {%- endif %}
 
 {%- if do_dacycle %}
-{%- if do_sddacycle %}
+{%- if do_pm_da %}
 <!--
 ************************************************************************
 ************************************************************************
@@ -2287,48 +2266,10 @@ MODULES_RUN_TASK_FP script.
     <envar><name>SLASH_ENSMEM_SUBDIR</name><value><cyclestr>{{ slash_ensmem_subdir }}</cyclestr></value></envar>
     <envar><name>SATBIAS_DIR</name><value><cyclestr>&NWGES_BASEDIR;/satbias</cyclestr></value></envar>
     <envar><name>nens</name><value>{{ num_ens_members }}</value></envar>
-    {%- if do_envar_radar_ref and do_envar_radar_ref_once %}
-    <envar><name>OB_TYPE</name><value>conv_dbz</value></envar>
-    {%- endif %}
     <dependency>
        <and>
-         <timedep><cyclestr offset="&START_TIME_CONVENTIONAL;">@Y@m@d@H@M00</cyclestr></timedep>
-         <taskdep task="&PREP_CYC_TN;_prod{{ uscore_ensmem_name }}"/>
-         {%- if use_rrfse_ens %}
-         {%- if do_envar_radar_ref and do_envar_radar_ref_once %}
-         <taskdep task="&PROCESS_RADAR_REF_TN;_prod"/>
-         {%- endif %}
-         <or>
-           {%- if do_spinup %}
-            <and>
-             <or>
-             {%- for h in cycl_hrs_prodstart_ens %}
-               <streq><left>{{ h }}</left><right><cyclestr>@H</cyclestr></right></streq>
-             {%- endfor %}
-             </or>
-             {% for h in range(1, num_ens_members+1) %}
-             <datadep age="00:00:01:00"><cyclestr offset="-{{ da_cycle_interval_hrs }}:00:00">&RRFSE_FG_ROOT;/@Y@m@d@H/mem{{ "%04d" % h  }}/fcst_fv3lam_spinup/RESTART/</cyclestr><cyclestr>@Y@m@d.@H0000.coupler.res</cyclestr></datadep>
-             {%- endfor %}
-            </and>
-            <and>
-             <or>
-             {%- for h in cycl_hrs_prodstart_ens %}
-               <strneq><left>{{ h }}</left><right><cyclestr>@H</cyclestr></right></strneq>
-             {%- endfor %}
-             </or>
-             {% for h in range(1, num_ens_members+1) %}
-             <datadep age="00:00:01:00"><cyclestr offset="-{{ da_cycle_interval_hrs }}:00:00">&RRFSE_FG_ROOT;/@Y@m@d@H/mem{{ "%04d" % h  }}/fcst_fv3lam/RESTART/</cyclestr><cyclestr>@Y@m@d.@H0000.coupler.res</cyclestr></datadep>
-             {%- endfor %}
-            </and>
-           {%- else %}
-            <and>
-             {% for h in range(1, num_ens_members+1) %}
-             <datadep age="00:00:01:00"><cyclestr offset="-{{ da_cycle_interval_hrs }}:00:00">&RRFSE_FG_ROOT;/@Y@m@d@H/mem{{ "%04d" % h  }}/fcst_fv3lam/RESTART/</cyclestr><cyclestr>@Y@m@d.@H0000.coupler.res</cyclestr></datadep>
-             {%- endfor %}
-            </and>
-           {%- endif %}
-         </or>
-         {%- endif %}
+         <timedep><cyclestr offset="&START_TIME_PROCPM;">@Y@m@d@H@M00</cyclestr></timedep>
+         <taskdep task="&PROCESS_PM_TN;_prod"/>
        </and>
     </dependency>
 
