1. SD DA updates local tracer files 2. Update smoke,dust tracers  Changes to be committed: 	modified:   scripts/exregional_run_analysis.sh 	modified:   scripts/exregional_run_postanal.sh 	modified:   ush/templates/FV3LAM_wflow.xml

--- a/ush/templates/FV3LAM_wflow.xml
+++ b/ush/templates/FV3LAM_wflow.xml
@@ -1463,6 +1463,9 @@ MODULES_RUN_TASK_FP script.
 
     <dependency>
        <taskdep task="&ANAL_GSI_TN;_spinup{{ uscore_ensmem_name }}"/>
+       {%- if do_pm_da %}
+         <taskdep task="&ANAL_SD_GSI_TN;_spinup{{ uscore_ensmem_name }}"/>
+       {%- endif %}
     </dependency>
 
   </task>
@@ -2389,6 +2392,9 @@ MODULES_RUN_TASK_FP script.
 
     <dependency>
        <taskdep task="&ANAL_GSI_TN;_prod{{ uscore_ensmem_name }}"/>
+       {%- if do_pm_da %}
+         <taskdep task="&ANAL_SD_GSI_TN;_prod{{ uscore_ensmem_name }}"/>
+       {%- endif %}
     </dependency>
 
   </task>
