--- a/ush/templates/FV3LAM_wflow.xml
+++ b/ush/templates/FV3LAM_wflow.xml
@@ -1462,9 +1462,13 @@ MODULES_RUN_TASK_FP script.
     {%- endif %}
 
     <dependency>
-       <taskdep task="&ANAL_GSI_TN;_spinup{{ uscore_ensmem_name }}"/>
        {%- if do_pm_da %}
-         <taskdep task="&ANAL_SD_GSI_TN;_spinup{{ uscore_ensmem_name }}"/>
+        <and>
+        <taskdep task="&ANAL_GSI_TN;_spinup{{ uscore_ensmem_name }}"/>
+        <taskdep task="&ANAL_SD_GSI_TN;_spinup{{ uscore_ensmem_name }}"/>
+        </and>
+       {%- else %}
+         <taskdep task="&ANAL_GSI_TN;_spinup{{ uscore_ensmem_name }}"/>
        {%- endif %}
     </dependency>
 
@@ -2391,9 +2395,13 @@ MODULES_RUN_TASK_FP script.
     {%- endif %}
 
     <dependency>
-       <taskdep task="&ANAL_GSI_TN;_prod{{ uscore_ensmem_name }}"/>
        {%- if do_pm_da %}
-         <taskdep task="&ANAL_SD_GSI_TN;_prod{{ uscore_ensmem_name }}"/>
+        <and>
+        <taskdep task="&ANAL_GSI_TN;_prod{{ uscore_ensmem_name }}"/> 
+        <taskdep task="&ANAL_SD_GSI_TN;_prod{{ uscore_ensmem_name }}"/>
+        </and>
+       {%- else %}
+         <taskdep task="&ANAL_GSI_TN;_prod{{ uscore_ensmem_name }}"/>
        {%- endif %}
     </dependency>
 
